--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 #theme: jekyll-agency
 remote_theme: charliewilliamsgb/agency-jekyll-theme
 
-url    : "https://www.charliewilliams.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "https://www.charliewilliams.one" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : "Charlie Williams"
